<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="32dp"
    android:background="@drawable/bg_menu">

    <TextView
        style="@style/TextAppearance.BomberMama.Title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pause_title"
        android:textSize="40sp"
        android:layout_marginBottom="28dp" />

    <Button
        android:id="@+id/btnResume"
        style="@style/TextAppearance.BomberMama.Button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:padding="14dp"
        android:textSize="17sp"
        android:background="@drawable/btn_success"
        android:text="@string/pause_resume" />

    <Button
        android:id="@+id/btnRestart"
        style="@style/TextAppearance.BomberMama.Button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:padding="14dp"
        android:textSize="17sp"
        android:background="@drawable/btn_primary"
        android:text="@string/pause_restart" />

    <Button
        android:id="@+id/btnMenu"
        style="@style/TextAppearance.BomberMama.Button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="14dp"
        android:textSize="17sp"
        android:background="@drawable/btn_secondary"
        android:text="@string/pause_menu" />

</LinearLayout>
